force-app/main/default/objects/Competitive_Summary__c/Competitive_Summary__c.object-meta.xml
<CustomObject>
    <description>The Competitive Summary object is a custom object created to summarize the Competitive Intelligence records according to a Account - Competitor - Opportunity/Call Report combination.</description>
    <label>Competitive Summary</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Competitive Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>