force-app/main/default/objects/Competitive_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the account appropriate for Competitive information</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitive Summary</relationshipLabel>
    <relationshipName>Competitive_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>