force-app/main/default/objects/Competitive_Summary__c/fields/Call_Report__c.field-meta.xml
<CustomField>
    <fullName>Call_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Respective Call Report for the Record</description>
    <label>Call Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipLabel>Competitive Summary</relationshipLabel>
    <relationshipName>Competitive_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>