force-app/main/default/objects/Competitive_Summary__c/fields/CallReport_Competitor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CallReport_Competitor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CallReport Competitor Lookup</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitive Summary (CallReport)</relationshipLabel>
    <relationshipName>CallReport_Competitor</relationshipName>
    <type>Lookup</type>
</CustomField>