force-app/main/default/objects/Competitive_Summary__c/fields/Competitive_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Intelligence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Competitive Intelligence record created with exact Account/Competitor Combination</description>
    <inlineHelpText>Select the appropriate Competitive Intelligence record created with Account/Competitor Combination</inlineHelpText>
    <label>Competitive Intelligence</label>
    <referenceTo>Competitive_Threat__c</referenceTo>
    <relationshipLabel>Competitive Summary</relationshipLabel>
    <relationshipName>Competitive_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>