force-app/main/default/objects/Competitive_Summary__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Competitor appropriate to this Competitor Summary</inlineHelpText>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitive Summary</relationshipLabel>
    <relationshipName>Competitive_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>