force-app/main/default/objects/Competitive_Summary__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <formula>Competitive_Intelligence__r.Competitor_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Name</label>
    <type>Text</type>
</CustomField>