force-app/main/default/objects/Competitive_Summary__c/fields/Competitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Type__c</fullName>
    <description>Competitor type particular to the record</description>
    <inlineHelpText>Type of Competitor is entered with respect to particular Opportunity/Call Report</inlineHelpText>
    <label>Competitor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>