force-app/main/default/objects/Competitive_Summary__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Name</description>
    <inlineHelpText>Select the appropriate opportunity corresponding to the record</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitive Summary</relationshipLabel>
    <relationshipName>Competitive_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>