force-app/main/default/objects/Competitive_Summary__c/fields/Opportunity_Competitor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Competitor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Competitor Lookup</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitive Summary (Opportunity)</relationshipLabel>
    <relationshipName>Opportunity_Competitor</relationshipName>
    <type>Lookup</type>
</CustomField>