force-app/main/default/objects/Competitive_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Competitor__c</columns>
    <columns>Competitor_Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Call_Report__c</columns>
    <columns>Competitive_Intelligence__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>